tests/baselines/reference/privateNameStaticEmitHelpers.errors.txt
main.ts(3,19): error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.


==== main.ts (1 errors) ====
    export class S {
        static #a = 1;
        static #b() { this.#a = 42; }
                      ~~~~~~~
!!! error TS2354: This syntax requires an imported helper but module 'tslib' cannot be found.
        static get #c() { return S.#b(); }
    }
    
==== tslib.d.ts (0 errors) ====
    // these are pre-TS4.3 versions of emit helpers, which only supported private instance fields
    export declare function __classPrivateFieldGet<T extends object, V>(receiver: T, state: any): V;
    export declare function __classPrivateFieldSet<T extends object, V>(receiver: T, state: any, value: V): V;
    